# cutthenoise

./: .gitignore  README.md  bridge.py  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/belalkhan/cutthenoise/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_jni.cpp
app/src/main/cpp/core/: engine_manager.cpp  engine_manager.h
app/src/main/cpp/jni/: native_bridge.cpp
app/src/main/java/dev/belalkhan/cutthenoise/: AnalyzerViewModel.kt  CutTheNoiseApplication.kt  MainActivity.kt
app/src/main/java/dev/belalkhan/cutthenoise/di/: AppModule.kt  RepositoryModule.kt
app/src/main/java/dev/belalkhan/cutthenoise/domain/: SentenceAnalysis.kt
app/src/main/java/dev/belalkhan/cutthenoise/llm/: InitModel.kt  LocalLlmEngine.kt  ModelLoader.kt  NativeBridge.kt  NativeLlmEngine.kt
app/src/main/java/dev/belalkhan/cutthenoise/presentation/: ReframeScreen.kt  ReframeUiState.kt  ReframeViewModel.kt
app/src/main/java/dev/belalkhan/cutthenoise/service/: DefaultNoiseAnalysisService.kt  NoiseAnalysisService.kt  SentenceSplitter.kt
app/src/main/java/dev/belalkhan/cutthenoise/ui/theme/: Color.kt  (+2 more)
app/src/main/res/drawable/: ic_ctn_logo.xml  ic_launcher_foreground.xml  ic_splash_logo.xml
app/src/main/res/values/: font_certs.xml  strings.xml  themes.xml
app/src/test/java/dev/belalkhan/cutthenoise/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
magic-qa/: build.gradle.kts
magic-qa/src/main/: AndroidManifest.xml
(+27 files in other folders)
